# learn-cmake-with-opencv

./: .gitignore  README.md
demo/: CMakeLists.txt  main.cpp  vision.cpp
demo/app/: main.cpp
demo/vision/: CMakeLists.txt
demo/vision/include/vision/: vision.hpp
demo/vision/src/: internal_log.hpp  vision.cpp
